# hack-dbeaver-credentials

./: README.md  local.env  pyproject.toml
hack_dbeaver_credentials/: __main__.py  config.py
